# e-calibration

./: Makefile  pyproject.toml
src/simulation/: make_coverage.py  make_table_coverage.py  plot_coverage.py  run_sim_coverage.py
src/utils/: plot_style.py  stats.py
src/visualization/: plot_coverage.py  preview_style.py
